# wordle_solver

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
wordle_solver/: config.py  wordle_solver.py  wordle_words.py
