[tool.poetry]
name = "wordle_solver"
version = "0.4.0"
description = "A Python script that produces a list of possible words based on your results from playing Wordle."
authors = ["Aaron Melton <aaron@aaronmelton.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
# line-too-long, bad-continuation: Allowing Black to enforce line length.
# logging-fstring-interpolation: Using f-strings in logging so I can log output
# to the console AND the log file simultaneously.
#
# line-too-long: I dont care about long lines
# singleton-comparison: Wont work as suggested by pylint
# too-many-lines: I dont care about too many lines
disable = '''
    line-too-long,
    singleton-comparison,
    too-many-lines,
    '''

[tool.bandit]
skips = []
exclude_dirs = ["./tests/"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.pydocstyle]
convention = '''google'''
inherit = false
match = '''(?!__init__).*\.py'''
match-dir = '''(?!tests)[^\.].*'''

[tool.pylint.miscellaneous]
notes = ''',
	TODO.md,
    '''
